--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.company.geonotifier.ui.MainActivity"
+            android:name="com.company.geonotifier.authentication.LoginActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
             <intent-filter>
@@ -38,6 +38,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.MainActivity"/>
+        <activity android:name=".authentication.RegisterActivity"/>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
